--- a/src/translations/translationIT.json
+++ b/src/translations/translationIT.json
@@ -33,10 +33,10 @@
       "noData": "Nessun dato disponibile, per favore seleziona un Tenant"
     },
     "table": {
-      "access": "Acessi",
+      "access": "Accessi",
       "path": "Percorso",
       "resource": "Risorse",
-      "resource_type": "Tipologia Risorse",
+      "resource_type": "Tipologia risorse",
       "actor": "Utente",
       "mode": "Modalità",
       "total_sngl": "Un elemento",
@@ -52,17 +52,18 @@
     },
     "form": {
       "servicePath": "Percorso dei servizi",
-      "acessTo": "Accesso a:",
+      "accessTo": "Accesso a:",
       "resourceType": "Tipologia risorse",
       "mode": "Modalità",
-      "actorType": "Tipologia Utente",
-      "actor": "Utente",
-      "otherAgent": "Altre Utenze",
-      "userType": "Tipologia Utenti",
-      "agent": "Nome Utente",
-      "agentGroup": "Nome Gruppo",
-      "agentClass": "Nome Classe",
-      "actorTitle": "Settaggi utenti",
+      "actorType": "Tipologia utente",
+      "user": "Utente",
+      "otherUser": "Altri utenti",
+      "userType": "Ruolo utente",
+      "acessTo":"Accesso A",
+      "agent": "Nome utente",
+      "agentGroup": "Gruppo utente",
+      "agentClass": "Ruolo utente",
+      "actorTitle": "Impostazioni utenti",
       "mainTitle": "Dati principali"
     }
   },
