--- a/src/translations/translationIT.json
+++ b/src/translations/translationIT.json
@@ -30,21 +30,40 @@
     "titles": {
       "page": "Policies",
       "new": "Nuova Policy",
+      "noData": "Nessun dato disponibile, per favore seleziona un Tenant"
+    },
+    "table": {
+      "access": "Accessi",
+      "path": "Percorso",
       "resource": "Risorse",
-      "access": "Accesso",
-      "resourceType": "Tipologia risorse",
-      "actor": "Attore",
-      "actoryType": "Tipo di Attore",
-      "noData": "Nessun Dato disponibile"
+      "resource_type": "Tipologia risorse",
+      "actor": "Utente",
+      "mode": "Modalità",
+      "total_sngl": "Un elemento",
+      "total_plur": "Elementi disponibili: {{name}}",
+      "selected": "{{name}} Selezionati"
+    },
+    "filters": {
+      "mode": "Modalità{{name}}",
+      "path": "Percorso{{name}}",
+      "actor_type": "Tipologia Utente<0>{{name}}</0>",
+      "resource_type": "Tipologia Risorsa{{name}}",
+      "actor": "Utente{{name}}"
     },
     "form": {
-      "servicePath": "Paths dei Servizi",
-      "acessTo": "Accesso A",
-      "resourceType": "Tipo risorsa",
+      "servicePath": "Percorso dei servizi",
+      "accessTo": "Accesso a:",
+      "resourceType": "Tipologia risorse",
       "mode": "Modalità",
-      "agentType": "Tipologia di Attore",
-      "agent": "Attore",
-      "otherAgent": "Altri possibili Attori"
+      "actorType": "Tipologia utente",
+      "user": "Utente",
+      "otherUser": "Altri utenti",
+      "userType": "Ruolo utente",
+      "agent": "Nome utente",
+      "agentGroup": "Gruppo utente",
+      "agentClass": "Ruolo utente",
+      "actorTitle": "Impostazioni utenti",
+      "mainTitle": "Dati principali"
     }
   },
   "common": {
