--- a/documentation/stories/Introduction.stories.mdx
+++ b/documentation/stories/Introduction.stories.mdx
@@ -1,14 +1,18 @@
-import { Meta } from '@storybook/addon-docs';
-import Code from './assets/code-brackets.svg';
-import Colors from './assets/colors.svg';
-import Comments from './assets/comments.svg';
-import Direction from './assets/direction.svg';
-import Flow from './assets/flow.svg';
-import Plugin from './assets/plugin.svg';
-import Repo from './assets/repo.svg';
-import StackAlt from './assets/stackalt.svg';
 
-<Meta title="Example/Introduction" />
+
+import {
+    Title,
+    Subtitle,
+    Description,
+    ArgsTable,
+    Stories,
+    PRIMARY_STORY,
+    Meta, Story, Canvas, Source
+} from '@storybook/addon-docs';
+import policiesImage from './images/policies.png';
+import serviceImage from './images/service.png';
+
+<Meta title="Introduction" />
 
 <style>
   {`
@@ -114,98 +118,58 @@ import StackAlt from './assets/stackalt.svg';
   `}
 </style>
 
-# Welcome to Storybook
+# Auth-Management UI For Anubis
 
-Storybook helps you build UI components in isolation from your app's business logic, data, and context.
-That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
 
-Browse example stories now by navigating to them in the sidebar.
-View their code in the `stories` directory to learn how they work.
-We recommend building UIs with a [**component-driven**](https://componentdriven.org) process starting with atomic components and ending with pages.
+ <Subtitle >Introduction: what the Auth-Management UI is about</Subtitle>
 
-<div className="subheading">Configure</div>
+The Webapp is to provide an intuitive UI for [Anubis policy-api](https://github.com/orchestracities/anubis) using the language of [Material for you](https://m3.material.io/) (or Material v3) and the help of [MUI](https://mui.com/) in order to have an intuitive and a familiar look and feel for the end user.
 
-<div className="link-list">
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/addons/addon-types"
-    target="_blank"
-  >
-    <img src={Plugin} alt="plugin" />
-    <span>
-      <strong>Presets for popular tools</strong>
-      Easy setup for TypeScript, SCSS and more.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/configure/webpack"
-    target="_blank"
-  >
-    <img src={StackAlt} alt="Build" />
-    <span>
-      <strong>Build configuration</strong>
-      How to customize webpack and Babel
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/configure/styling-and-css"
-    target="_blank"
-  >
-    <img src={Colors} alt="colors" />
-    <span>
-      <strong>Styling</strong>
-      How to load and configure CSS libraries
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/get-started/setup#configure-storybook-for-your-stack"
-    target="_blank"
-  >
-    <img src={Flow} alt="flow" />
-    <span>
-      <strong>Data</strong>
-      Providers and mocking for data libraries
-    </span>
-  </a>
-</div>
+In this section we are going to cover the documentation of the react components inside the app, and how to interact with them.
 
-<div className="subheading">Learn</div>
+The UI was builded with a [component-driven](https://componentdriven.org) process, every component can be redered by it's own withouth nesting properties
 
-<div className="link-list">
-  <a className="link-item" href="https://storybook.js.org/docs" target="_blank">
-    <img src={Repo} alt="repo" />
-    <span>
-      <strong>Storybook documentation</strong>
-      Configure, customize, and extend
-    </span>
-  </a>
-  <a className="link-item" href="https://storybook.js.org/tutorials/" target="_blank">
-    <img src={Direction} alt="direction" />
-    <span>
-      <strong>In-depth guides</strong>
-      Best practices from leading teams
-    </span>
-  </a>
-  <a className="link-item" href="https://github.com/storybookjs/storybook" target="_blank">
-    <img src={Code} alt="code" />
-    <span>
-      <strong>GitHub project</strong>
-      View the source and add issues
-    </span>
-  </a>
-  <a className="link-item" href="https://discord.gg/storybook" target="_blank">
-    <img src={Comments} alt="comments" />
-    <span>
-      <strong>Discord chat</strong>
-      Chat with maintainers and the community
-    </span>
-  </a>
-</div>
+<img src={policiesImage}  />
 
-<div className="tip-wrapper">
-  <span className="tip">Tip</span>Edit the Markdown in{' '}
-  <code>stories/Introduction.stories.mdx</code>
-</div>
+<Subtitle >How this documentation is structured:</Subtitle>
+
+This documentation is structured by components, every **components** type has a section based of the usage there are for examples components related to the `Tenants or the Policies` but also component that are `Shared between sections`.
+
+Every component is **documented with a canvas** to test it in a controlled envroinment, but also see it visually speaking.
+
+It's also possibile to **see the Docs section** and read about the usage of the components, and the **properties** related to them. Every property has the type the default values and the description about it.
+
+
+ <Subtitle >What external libraries the app is using:</Subtitle>
+
+ The **Auth-Management UI For Anubis** is using [MUI or material UI](https://mui.com/) for most of the grid and components with the last version of the theme engine with some customization, but the goal was to create a clean code that can be understood with a simple reading of the MUI documentation.
+
+ A part from that the app is also using [Axios](https://github.com/axios/axios) as an http client, and [apollo client](https://www.apollographql.com/docs/react/) for the graphql implementation.
+
+ The client authentication part is done with [react oidc](https://github.com/AxaGuilDEv/react-oidc) with OpenID as a standard.
+
+ [React router](https://reactrouter.com/) is also used.
+
+ <img src={serviceImage}  />
+
+ <Subtitle >How the components are created:</Subtitle>
+
+ The components inside the app are all pure functional components created using [react hooks](https://en.reactjs.org/docs/hooks-intro.html) this choice was made for rendering reasons and to make the components **less dependable on states**.
+ 
+ Every component can be used in an isolated way, so if a change is needed or if the copmponent should be rendered with a different type of data inside another page this could be achived without changing the entire nesting architecture.
+
+
+<Subtitle >What is the App structure:</Subtitle>
+
+The App structure is composed in this order:
+
+ **-App.js**
+
+  **-pages**
+
+   **-components**
+
+The App.js page is managing the login and the main data inside the states, the pages are done by pure components
+
+  <Subtitle >Description:</Subtitle>
+
