introduction text changed

--- a/documentation/stories/AnIntroduction.stories.mdx
+++ b/documentation/stories/AnIntroduction.stories.mdx
@@ -121,47 +121,49 @@ import serviceImage from './images/service.png';
 # Auth-Management UI For Anubis
 
 
- <Subtitle >Introduction: what the Auth-Management UI is about</Subtitle>
+ <Subtitle >Introduction: what is the Auth-Management UI?</Subtitle>
 
-The Webapp is to provide an intuitive UI for [Anubis policy-api](https://github.com/orchestracities/anubis) using the language of [Material for you](https://m3.material.io/) (or Material v3) and the help of [MUI](https://mui.com/) in order to have an intuitive and a familiar look and feel for the end user.
+The Auth-Management UI provides a web based interface for [Anubis policy-api](https://github.com/orchestracities/anubis) using [Material for you](https://m3.material.io/) (or Material v3) design system and [MUI](https://mui.com/) tools, to provide an intuitive and a familiar look and feel for the end user.
 
-In this section we are going to cover the documentation of the react components inside the app, and how to interact with them.
+This section documents the react components inside the app, and how to interact with them.
 
-The UI was builded with a [component-driven](https://componentdriven.org) process, every component can be redered by it's own withouth nesting properties
+The UI  is built using a [component-driven](https://componentdriven.org) approach, where every component can be rendered by its own without nesting properties.
 
 <img src={policiesImage}  />
 
-<Subtitle >How this documentation is structured:</Subtitle>
-
-This documentation is structured by components, every **components** type has a section based of the usage there are for examples components related to the `Tenants or the Policies` but also component that are `Shared between sections`.
-
-Every component is **documented with a canvas** to test it in a controlled envroinment, but also see it visually speaking.
-
-It's also possibile to **see the Docs section** and read about the usage of the components, and the **properties** related to them. Every property has the type the default values and the description about it.
+<Subtitle >Documentation structure</Subtitle>
 
 
- <Subtitle >What external libraries the app is using:</Subtitle>
+The documentation groups components by type based on their usage. There are for examples components specific to `Tenants` or `Policies` data models and related UI areas and components that are `Shared` across different UI areas.
 
- The **Auth-Management UI For Anubis** is using [MUI or material UI](https://mui.com/) for most of the grid and components with the last version of the theme engine with some customization, but the goal was to create a clean code that can be understood with a simple reading of the MUI documentation.
+Every component documentation includes a **Canvas** section to supports its testing in a controlled environment and visualize it.
 
- A part from that the app is also using [Axios](https://github.com/axios/axios) as an http client, and [apollo client](https://www.apollographql.com/docs/react/) for the graphql implementation.
+Beside Canvas section, each component documentation has also a Docs section that provide information about the usage of the component, and its properties. Every property has a type, default values and a description.
 
- The client authentication part is done with [react oidc](https://github.com/AxaGuilDEv/react-oidc) with OpenID as a standard.
+<Subtitle >External libraries used</Subtitle>
 
- [React router](https://reactrouter.com/) is also used.
+**Auth-Management UI** For Anubis is using [MUI or material UI](https://mui.com/) to define most of the grid and components leveraging the last version of the theme engine with some customization. 
 
- <img src={serviceImage}  />
+The goal is to create a clean code that can be easily understood based on MUI documentation.
 
- <Subtitle >How the components are created:</Subtitle>
+The UI is also using [Axios](https://github.com/axios/axios) as http client, and [apollo client](https://www.apollographql.com/docs/react/) for the interaction with graphql.
 
- The components inside the app are all pure functional components created using [react hooks](https://en.reactjs.org/docs/hooks-intro.html) this choice was made for rendering reasons and to make the components **less dependable on states**.
+The authentication leverages [react oidc](https://github.com/AxaGuilDEv/react-oidc) implementation of OpenID standard.
+
+[React router](https://reactrouter.com/) is also used.
+
+<img src={serviceImage}  />
+
+<Subtitle >Components architecture</Subtitle>
+
+The components inside the app are all pure functional components created using [react hooks](https://en.reactjs.org/docs/hooks-intro.html) this choice was made for rendering reasons and to make the components **less dependable on states**.
  
- Every component can be used in an isolated way, so if a change is needed or if the copmponent should be rendered with a different type of data inside another page this could be achived without changing the entire nesting architecture.
+Every component can be used in an isolated way, so if a change is needed or if the components should be rendered with a different type of data inside another page this can be achieved without changing the entire nesting architecture.
 
 
-<Subtitle >What is the App structure:</Subtitle>
+<Subtitle >Code structure</Subtitle>
 
-The App structure is composed in this order:
+The UI code is organized as follow:
 
  **-App.js**
 
