--- a/documentation/stories/HowToDocument.stories.mdx
+++ b/documentation/stories/HowToDocument.stories.mdx
@@ -120,34 +120,47 @@ import serviceImage from './images/service.png';
 
 # How to Document the components
 
+<Subtitle>Introduction</Subtitle>
 
- <Subtitle >Introduction:</Subtitle>
+The documentation of components inside the App is done with
+[StoryBook](https://storybook.js.org/).
 
-The documentation of components inside the App is done with [StoryBook](https://storybook.js.org/).
+StoryBook use a combination of jsx components and mdx pages to create a visual
+section and a textual one.
 
-StoryBook use a combination of jsx components and mdx pages to create a visual section and a textual one.
+<Subtitle>Where i need to start</Subtitle>
 
-<Subtitle >Where i need to start:</Subtitle>
+Inside the main folder you can find the **documentation folder**.
+Inside it you can see the stories.
 
-Inside the main folder you can find the **documentation one**. Inside it you can see the stories.
+A story is a page inside the documentation, they are organized in the same way
+of the components (`shared`,`tenant`,`policy`,`service`).
 
-A story is a page inside the documentation, they are organized in the same way of the components (shared,tenant,policy,service).
+<Subtitle>How to create a story</Subtitle>
 
-<Subtitle >How to create a story:</Subtitle>
+To create a story you need to create two files inside the correct folder:
+one is the **component** and the other one is the **story**.
 
-To create a story you need to create two files inside the correct folder: one is the **component** and the other one is the **story**, there are some rules to respect:
+There are some rules to respect:
 
-for example the extention of the file **must be .jsx** and the story file **must have the prefix .stories** inside the name.
+for example the extension of the file **must** be `.jsx` and the story file
+**must** have `.stories` inside the name.
 
-The result are two separate files: **componentName.jsx** and **componentName.stories.jsx**
+The result are two separate files: `componentName.jsx` and
+`componentName.stories.jsx`.
 
-<Subtitle >The component</Subtitle>
+<Subtitle>The component</Subtitle>
 
-Inside the component file, we are going to declare inside a functional component the element that we want to document, this component will be rendered inside the **Canvas** part of Storybook.
+Inside the component file, we declare as a functional
+component the element that we want to document, this component will be
+rendered inside the **Canvas** part of Storybook.
 
-After that is **mandatory** to declare also the propTypes and the default values of our component props.
+After that is **mandatory** to declare also the propTypes and the default
+values of our component props.
 
-It is also important to add a description of every property, to achive this inside the propTypes at the top of the propery name, is necessary to write a multine comment, with every line of text with the character `*` as a prefix
+It is also important to add a description of every property. In order to do,
+write a multiline comment inside the `propTypes` at the top of the property
+name.
 
 **EXAMPLE**
 
@@ -173,7 +186,7 @@ export const SimpleTitle = ({ mainTitle,
 };
 SimpleTitle.propTypes = {
   /**
-    * Im a description about the property of this component that Im documenting
+    * I'm a description about the property of this component that I'm documenting
     */
   mainTitle: PropTypes.string.isRequired,
 };
@@ -183,21 +196,36 @@ SimpleTitle.defaultProps = {
                         `}
                     />
 
-<Subtitle >The component stories</Subtitle>
+<Subtitle>The component stories</Subtitle>
 
-To generate a **correct documentaion page**, inside the stories file, we are going to declare the textual explaination about the component and the variation of it.
+To generate a **correct documentation page**, inside the stories file, we are
+going to declare the textual explanation about the component and the variation 
+of it.
 
-First of all we need to import the **component that we have creted previusly**, after that we need to change some setting inside the export, like the title, the controls avaitable to the user and the documentation page.
+First of all we need to import the
+**component that we have created previously**, after that we need to change
+some setting inside the export, like the title, the controls available
+to the user and the documentation page.
 
-The title is the one that is going displayed inside the lateral bar, and **can be nested** using `/`, like example Shared/SimpleTitle or Shared/Titles/SimpleTitle.
+The title is the one that is going displayed inside the lateral bar, and
+**can be nested** using `/`, like example `Shared/SimpleTitle` or
+`Shared/Titles/SimpleTitle`.
 
-The argTypes **controls the user interaction on the property**, if we dont want that the user is able to change the data inside the canvas we need to add inside the argTypes the propertyname with an object with control: false as a property.
+The `argTypes` **controls the user interaction on the property**,
+if we don't want that the user is able to change the data inside the canvas
+we need to add inside the `argTypes` the `propertyname` with an object with
+control: false as a property.
 
-The textual documentaion is inside the class parameters property and is achived using a **combination of mdx and storybook addon-docs** like the ArgsTable component to display the properties or the Source to display the code.
+The textual documentation is inside the class parameters property and is
+achieved using a **combination of mdx and storybook addon-docs** like
+the `ArgsTable` component to display the properties or the Source to display
+the code.
 
-To maintain the same structure of the previus documentaion is reccomended to use a schema of: `title,description,argsTable` in this order.
+To maintain the same structure of the previous documentation is recommended
+to use as schema: `title,description,argsTable` in this exact order.
 
-the ArgsTable is especially important because is containing the description of **every component property** that we have previusly wrote
+The `argsTable` is especially important because is containing the description
+of **every component property** that we have previously wrote.
 
 **EXAMPLE OF THE CLASS**
 
@@ -246,7 +274,8 @@ export default {
                     />
 
 
-To Create different **versions of the same component** we need to add and export different versions with different property values.
+To Create different **versions of the same component** we need to add and export
+different versions with different property values.
 
 **EXAMPLE OF VERSIONING**
 
