--- a/documentation/stories/AnIntroduction.stories.mdx
+++ b/documentation/stories/AnIntroduction.stories.mdx
@@ -1,5 +1,3 @@
-
-
 import {
     Title,
     Subtitle,
@@ -140,7 +138,6 @@ properties.
 
 <Subtitle>Documentation structure</Subtitle>
 
-
 The documentation groups components by type based on their usage. There are for
 examples components specific to `Tenants` or `Policies` data models and related
 UI areas and components that are `Shared` across different UI areas.
@@ -149,7 +146,7 @@ Every component documentation includes a **Canvas** section to supports its
 testing in a controlled environment and visualize it.
 
 Beside Canvas section, each component documentation has also a Docs section that
-provide information about the usage of the component, and its properties.
+provides information on the usage of the component, and its properties.
 Every property has a type, default values and a description.
 
 <Subtitle>External libraries used</Subtitle>
