--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -52,6 +52,7 @@
     },
     "form": {
       "servicePath": "Service path",
+      "defaultActor":"Other values",
       "accessTo": "Access to",
       "resourceType": "Resource type",
       "mode": "Mode",
