--- a/src/translations/translationIT.json
+++ b/src/translations/translationIT.json
@@ -33,9 +33,8 @@
       "noData": "Nessun dato disponibile, per favore seleziona un Tenant"
     },
     "table": {
-      "access": "Accessi",
+      "access": "Risorse",
       "path": "Percorso",
-      "resource": "Risorse",
       "resource_type": "Tipologia risorse",
       "actor": "Utente",
       "mode": "Modalità",
@@ -45,14 +44,15 @@
     },
     "filters": {
       "mode": "Modalità{{name}}",
-      "path": "Percorso{{name}}",
+      "resource": "Risorse{{name}}",
+      "path": "Percorso servizi{{name}}",
       "actor_type": "Tipologia Utente<0>{{name}}</0>",
       "resource_type": "Tipologia Risorsa{{name}}",
       "actor": "Utente{{name}}"
     },
     "form": {
       "servicePath": "Percorso dei servizi",
-      "accessTo": "Accesso a:",
+      "resource": "Risorse",
       "resourceType": "Tipologia risorse",
       "mode": "Modalità",
       "defaultActor":"Altri valori predefiniti",
