--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -24,6 +24,9 @@
     },
     "tooltip": {
       "editIcon": "New Sub-path"
+    },
+    "form":{
+     "mainPath":"Path of reference" 
     }
   },
   "policies": {
