--- a/documentation/stories/HowToDocument.stories.mdx
+++ b/documentation/stories/HowToDocument.stories.mdx
@@ -167,7 +167,7 @@ name.
                         dark={true}
                         code={`
                 import PropTypes from 'prop-types';
-import { MainTitle } from '../../../src/components/shared/mainTitle';
+import  MainTitle  from '../../../src/components/shared/mainTitle';
 import Grid from '@mui/material/Grid';
 export const SimpleTitle = ({ mainTitle,
   ...props }) => {
