added the possibility to add subpath in the display table

--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -26,7 +26,7 @@
       "editIcon": "New Sub-path"
     },
     "form":{
-     "mainPath":"Path of reference" 
+     "parentPath":"Parent Path" 
     }
   },
   "policies": {
