--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -23,7 +23,10 @@
       "edit": "New Sub-service"
     },
     "tooltip": {
-      "editIcon": "New Sub-path"
+      "editIcon": "New Sub-service"
+    },
+    "form":{
+     "parentPath":"Parent Path" 
     }
   },
   "policies": {
@@ -91,7 +94,7 @@
       "title": "Settings",
       "language": "Language"
     },
-    "subPath": "Subpaths of: <0>{{name}}</0>",
+    "subPath": "Sub-services of: <0>{{name}}</0>",
     "table": {
       "counterPlural": "{{data}}  Elements",
       "counterSingle": "{{data}}  Element",
