added the possibility to add a custom icon on the tenant

--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -10,7 +10,11 @@
       "description": "Description",
       "icon": "Icon",
       "primaryColor": "Primary Color: ",
-      "secondaryColor": "Secondary Color: "
+      "secondaryColor": "Secondary Color: ",
+      "fileCancel":"cancel",
+      "fileSubmit":"submit",
+      "fileIstructions":"Drag or click here!",
+      "addImage":"Add Image"
     },
     "tooltip": {
       "editIcon": "Edit"
