--- a/src/translations/translationIT.json
+++ b/src/translations/translationIT.json
@@ -77,6 +77,17 @@
       "mainTitle": "Dati principali"
     }
   },
+  "resourceType":{
+    "form":{
+      "resourceName":"Tipo Risorsa",
+      "endpoint":"Endpoint"
+    },
+    "table": {
+     "name":"Nome",
+     "author":"Autore",
+     "endpoint":"Endpoint Link"
+    }
+  },
   "common": {
     "messages":{
       "sucessUpdate": "{{data}}  Aggiornato",
