Resource type new logic (#100)
* Add form for creating resource types
* Add support for retrieving resource id based on resource type endpoint in policy forms
* Update RELEASE_NOTES.md

Co-authored-by: Federico M. Facca <chicco785@users.noreply.github.com>

--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -77,6 +77,20 @@
       "mainTitle": "Main data"
     }
   },
+  "resourceType":{
+    "form":{
+      "resourceName":"Resource Type",
+      "endpoint":"Endpoint"
+    },
+    "table": {
+     "name":"name",
+     "author":"Created By",
+     "endpoint":"Endpoint Link"
+    },
+    "page":{
+      "title":"Resource Type"
+    }
+  },
   "common": {
     "messages":{
       "sucessUpdate": "{{data}}  Updated",
